@@ -82,17 +82,17 @@ namespace SimpleComponent_Basic_Impl
   SimpleComponent_Servant (const char * name,
                            ::CIDL_SimpleComponent_Basic_Impl::SimpleComponent_Exec_ptr executor)
    : SimpleComponent_Servant_Base (name, executor),
-     tcpip_read_test_data_consumer_ (this, &SimpleComponent_Servant::deserialize_tcpip_read_test_data),
+     dds_read_test_data_consumer_ (this, &SimpleComponent_Servant::deserialize_dds_read_test_data),
      corba_read_test_data_consumer_ (this, &SimpleComponent_Servant::deserialize_corba_read_test_data),
-     dds_read_test_data_consumer_ (this, &SimpleComponent_Servant::deserialize_dds_read_test_data)
+     tcpip_read_test_data_consumer_ (this, &SimpleComponent_Servant::deserialize_tcpip_read_test_data)
   {
     this->emits_.bind ("app_op_dds", &this->ctx_->writer_app_op_dds ());
     this->emits_.bind ("app_op_corba", &this->ctx_->writer_app_op_corba ());
     this->publishes_.bind ("app_op_tcpip", &this->ctx_->writers_app_op_tcpip ());
 
-    this->consumers_.bind ("tcpip_read_test_data", &this->tcpip_read_test_data_consumer_);
-    this->consumers_.bind ("corba_read_test_data", &this->corba_read_test_data_consumer_);
     this->consumers_.bind ("dds_read_test_data", &this->dds_read_test_data_consumer_);
+    this->consumers_.bind ("corba_read_test_data", &this->corba_read_test_data_consumer_);
+    this->consumers_.bind ("tcpip_read_test_data", &this->tcpip_read_test_data_consumer_);
   }
 
   //
@@ -157,20 +157,20 @@ namespace SimpleComponent_Basic_Impl
   }
 
   //
-  // get_consumer_tcpip_read_test_data
+  // get_consumer_dds_read_test_data
   //
   ::Outer::TestData_DDSConsumer_ptr SimpleComponent_Servant::
-  get_consumer_tcpip_read_test_data (void)
+  get_consumer_dds_read_test_data (void)
   {
     throw ::CORBA::NO_IMPLEMENT ();
   }
 
   //
-  // deserialize_tcpip_read_test_data
+  // deserialize_dds_read_test_data
   //
   void SimpleComponent_Servant::
-  deserialize_tcpip_read_test_data (SimpleComponent_Servant * servant,
-                                    const ::CUTS_DDS::Outer::TestData_DDS & dds_event)
+  deserialize_dds_read_test_data (SimpleComponent_Servant * servant,
+                                  const ::CUTS_DDS::Outer::TestData_DDS & dds_event)
   {
     // First, extract the event.
     CUTS_CCM_Event_T < ::OBV_Outer::TestData_DDS > event;
@@ -178,7 +178,7 @@ namespace SimpleComponent_Basic_Impl
 
     // Now, puch the event to the implemetation.
     if (servant->impl_)
-      servant->impl_->push_tcpip_read_test_data (event.in ());
+      servant->impl_->push_dds_read_test_data (event.in ());
   }
 
   //
@@ -207,20 +207,20 @@ namespace SimpleComponent_Basic_Impl
   }
 
   //
-  // get_consumer_dds_read_test_data
+  // get_consumer_tcpip_read_test_data
   //
   ::Outer::TestData_DDSConsumer_ptr SimpleComponent_Servant::
-  get_consumer_dds_read_test_data (void)
+  get_consumer_tcpip_read_test_data (void)
   {
     throw ::CORBA::NO_IMPLEMENT ();
   }
 
   //
-  // deserialize_dds_read_test_data
+  // deserialize_tcpip_read_test_data
   //
   void SimpleComponent_Servant::
-  deserialize_dds_read_test_data (SimpleComponent_Servant * servant,
-                                  const ::CUTS_DDS::Outer::TestData_DDS & dds_event)
+  deserialize_tcpip_read_test_data (SimpleComponent_Servant * servant,
+                                    const ::CUTS_DDS::Outer::TestData_DDS & dds_event)
   {
     // First, extract the event.
     CUTS_CCM_Event_T < ::OBV_Outer::TestData_DDS > event;
@@ -228,7 +228,7 @@ namespace SimpleComponent_Basic_Impl
 
     // Now, puch the event to the implemetation.
     if (servant->impl_)
-      servant->impl_->push_dds_read_test_data (event.in ());
+      servant->impl_->push_tcpip_read_test_data (event.in ());
   }
 }
 
