@@ -1,6 +1,6 @@
 // $Id$
 
-project (SimpleComponent_IDL_Gen) : cuts_opensplice_ccm_stub, cuts_codegen_defaults {
+project (SimpleComponent_IDL_Gen) : ciaoidldefaults, cuts_codegen_defaults {
   custom_only = 1
 
   idlflags += -Wb,stub_export_macro=SIMPLECOMPONENT_STUB_Export \
@@ -39,7 +39,7 @@ project (SimpleComponent_DDS_IDL_Gen) : splice_ts_defaults, requires_opensplice 
   }
 }
 
-project (SimpleComponent_stub) : ccm_stub, avoids_ace_for_tao, cuts_codegen_defaults {
+project (SimpleComponent_stub) : cuts_opensplice_ccm_stub, avoids_ace_for_tao, cuts_codegen_defaults {
   sharedname   = SimpleComponent_stub
 
   dynamicflags += SIMPLECOMPONENT_STUB_BUILD_DLL
