@@ -26,9 +26,9 @@ namespace SimpleComponent_Basic_Impl
   }
 
   //
-  // sink: tcpip_read_test_data
+  // sink: dds_read_test_data
   //
-  void SimpleComponent::push_tcpip_read_test_data (::Outer::TestData_DDS * ev)
+  void SimpleComponent::push_dds_read_test_data (::Outer::TestData_DDS * ev)
   {
     ACE_UNUSED_ARG (ev);
   }
@@ -42,10 +42,14 @@ namespace SimpleComponent_Basic_Impl
   }
 
   //
-  // sink: dds_read_test_data
+  // sink: tcpip_read_test_data
   //
-  void SimpleComponent::push_dds_read_test_data (::Outer::TestData_DDS * ev)
+  void SimpleComponent::push_tcpip_read_test_data (::Outer::TestData_DDS * ev)
   {
+    CUTS_CCM_Event_T <OBV_Outer::TestData_DDS> __event_100000010__;
+    this->ctx_->push_app_op_tcpip (__event_100000010__.in ());
+
+    this->cpu1_.load_profile (ev->profile ());
     ACE_UNUSED_ARG (ev);
   }
 
@@ -54,6 +58,8 @@ namespace SimpleComponent_Basic_Impl
   //
   void SimpleComponent::periodic_sendData (void)
   {
+    ++ this->eventCount_;
+    this->ctx_->push_handle_message_ex (__event_100000011__.in ());
   }
 
   void SimpleComponent::ccm_activate (void)
